--- a/Todo-Api/Todo-Api.csproj
+++ b/Todo-Api/Todo-Api.csproj
@@ -27,11 +27,13 @@
     <None Remove="Data\" />
     <None Remove="Dto\" />
     <None Remove="Mappers\" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="Dto\" />
     <Folder Include="Mappers\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
